WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120910
Calculating the size of the Heap should not require walking over it
https://bugs.webkit.org/show_bug.cgi?id=120910
Summary
Calculating the size of the Heap should not require walking over it
Mark Hahnenberg
Reported
2013-09-06 16:47:03 PDT
Currently Heap::size() is O(sizeof(Heap)). This is too expensive to call during a collection. We should keep a count of visited and copied bytes as each collection progresses so as to avoid re-walking the Heap at the end of collection.
Attachments
Patch
(7.69 KB, patch)
2013-09-06 18:33 PDT
,
Mark Hahnenberg
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2013-09-06 18:33:08 PDT
Created
attachment 210827
[details]
Patch
Geoffrey Garen
Comment 2
2013-09-06 23:09:13 PDT
Comment on
attachment 210827
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=210827&action=review
r=me
> Source/JavaScriptCore/heap/Heap.cpp:647 > + // rather than all used (inluding dead) copied bytes, thus it's
Should be "including".
> Source/JavaScriptCore/heap/Heap.h:254 > + size_t m_totalBytesVisited; > + size_t m_totalBytesCopied;
Let's initialize these in the Heap constructor.
Mark Hahnenberg
Comment 3
2013-09-08 17:11:16 PDT
Committed
r155317
: <
http://trac.webkit.org/changeset/155317
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug