Source/JavaScriptCore/heap/GCThreadSharedData.h
@@ -65,6 +65,8 @@ public:
 #if ENABLE(PARALLEL_GC)
     void resetChildren();
     size_t childVisitCount();
+    size_t childBytesVisited();
+    size_t childBytesCopied();
     size_t childDupStrings();
 #endif
     
